objects/simplesurvey__Simple_Survey_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>simplesurvey__App_Branding_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Branding Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Auto_Save_Partial_Responses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will save responses from a user even if the leave the page before submitting.</description>
        <label>Auto-Save Partial Responses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Bypass_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Checkbox_Picklist_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Picklist Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Contact_Survey_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to enable a custom Case trigger from the extension package which will set a custom field on the contact labeled &quot;Survey_Last_Requested_On__c&quot;.</description>
        <label>Contact Survey Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Diagnostic_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, survey will store values for the survey taker&apos;s IP Address and Browser information.</description>
        <label>Diagnostic Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Duplicate_Check__c</fullName>
        <label>Duplicate Check (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Enable_reCAPTCHA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Google&apos;s reCAPTCHA service for your Simple Survey experience.</description>
        <label>Enable reCAPTCHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Horizontal_Checkboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal Checkboxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Horizontal_Radios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal Radios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Human_Confidence_Score_Threshold__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>When reCAPTCHA is enabled, a survey takers human confidence score must be at least this value in order for the survey to be considered taken by a human and created.</description>
        <label>Human Confidence Score Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Include_Privacy_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated) Display a privacy disclaimer link/label at the bottom of the survey landing page. If the &quot;Capture Partial Responses&quot; setting is not enabled, this does nothing.</description>
        <label>Include Privacy Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_License_Assignment_Error__c</fullName>
        <description>When the last email was sent.</description>
        <label>Last License Assignment Error</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Privacy_Disclaimer_URL__c</fullName>
        <description>A URL to a privacy disclaimer. Should be used for long privacy policies.</description>
        <label>Privacy Disclaimer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Radio_Picklist_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radio Picklist Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_1_IMG__c</fullName>
        <label>Survey Rate 1 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_2_IMG__c</fullName>
        <label>Survey Rate 2 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_3_IMG__c</fullName>
        <label>Survey Rate 3 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_Down_URL__c</fullName>
        <description>The document URL to use for the thumbs down rating.</description>
        <label>Survey Rate Down URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_Up_URL__c</fullName>
        <description>The document URL to use for the thumbs up rating.</description>
        <label>Survey Rate Up URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Site_Logo__c</fullName>
        <label>Survey Site Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Site_URL__c</fullName>
        <label>Survey Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__reCAPTCHA_Secret_Key__c</fullName>
        <description>The Secret Key for reCAPTCHA.</description>
        <label>reCAPTCHA Secret Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__reCAPTCHA_Site_Key__c</fullName>
        <description>The Site Key for reCAPTCHA.</description>
        <label>reCAPTCHA Site Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Simple Survey Setting</label>
</CustomObject>